--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -1,8 +1,6 @@
 FROM klakegg/hugo:ext-alpine
 
-# Update package index before installing packages
-RUN apk update && \
-    apk add --no-cache git npm
+RUN apk add git npm
 
 COPY package.json package-lock.json ./
 
